# music-dataset

./: .gitignore  README.md  requirements.txt  setup.cfg
gtzan/processed/: mgd_baseline.csv  mgd_min_max.csv  mgd_raw.csv  mgd_scenario1.csv  mgd_scenario3.csv  mgd_scenario4.csv  mgd_scenario5.csv  mgd_standardized.csv
gtzan/processed/baseline/: test.csv  train.csv
gtzan/processed/baseline/experiment-1/: fold-1.csv  fold-10.csv  fold-2.csv  fold-3.csv  fold-4.csv  fold-5.csv  fold-6.csv  fold-7.csv  fold-8.csv  fold-9.csv
gtzan/processed/baseline/experiment-2/: fold-1.csv  fold-10.csv  fold-2.csv  fold-3.csv  fold-4.csv  fold-5.csv  fold-6.csv  fold-7.csv  fold-8.csv  fold-9.csv
gtzan/processed/baseline/experiment-3/: fold-1.csv  fold-10.csv  fold-2.csv  fold-3.csv  fold-4.csv  fold-5.csv  fold-6.csv  fold-7.csv  fold-8.csv  fold-9.csv
gtzan/processed/baseline/experiment-4/: fold-1.csv  fold-10.csv  fold-2.csv  (+7 more)
gtzan/processed/min_max/: test.csv  train.csv
gtzan/processed/raw/: test.csv  train.csv
gtzan/processed/scenario1/: test.csv  train.csv
gtzan/processed/scenario3/: test.csv  train.csv
gtzan/processed/scenario5/: test.csv  train.csv
gtzan/processed/standardized/: test.csv  train.csv
notebooks/: correlation_exploration.ipynb  dataset_normalization.ipynb  dataset_split.ipynb  filters_exploration.ipynb  gtzan_features.ipynb  pipelines_exploration.ipynb  pipes_exploration.ipynb  utils_test.ipynb
src/mgd/: __init__.py  cli.py  dataset_processing.py  feature_extraction.py  filters.py  genre.py  genres.py  pipelines.py  pipes.py  utils.py
(+310 files in other folders)
