[metadata]
name = mgd
version = 1.0
author = Moésio Filho
author_email = moesio.wenceslau@ufrpe.br
description = Music Genre Dataset (MGD) generator package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ufrpe-2021-2-IA/music-dataset
project_urls =
    Bug Tracker = https://github.com/ufrpe-2021-2-IA/music-dataset/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    pandas~=1.3.5
    librosa~=0.9.2
    scikit-learn~=1.0.2
    numpy~=1.21.6

[options.packages.find]
where = src
